bindings/rust/persistent/src/bindings.rs

unsafe extern "C" {
    #[doc = " @brief Snapshot a bus configuration\n @param hdr: a splinter  bus header structure"]
    pub fn splinter_config_snapshot(hdr: *mut splinter_header) -> u8;
}
unsafe extern "C" {
    #[doc = " @brief Set a user slot flag\n @param slot Splinter slot structure\n @param mask bitmask to set"]
    pub fn splinter_slot_usr_set(slot: *mut splinter_slot, mask: u16);
}
unsafe extern "C" {
    #[doc = " @brief Clear a user slot flag\n @param slot Splinter slot structure\n @param mask bitmask to clear"]
    pub fn splinter_slot_usr_clear(slot: *mut splinter_slot, mask: u16);
}
unsafe extern "C" {
    #[doc = " @brief Test a user slot flag\n @param slot Splinter slot structure\n @param mask bitmask to test"]
    pub fn splinter_slot_usr_test(slot: *mut splinter_slot, mask: u16) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Get a user slot flag snapshot\n @param slot Splinter slot structure"]
    pub fn splinter_slot_usr_snapshot(slot: *mut splinter_slot) -> u16;
}
unsafe extern "C" {
    #[doc = " @brief Name (declare intent to) a type fo a slot\n @param key Name of the key to change\n @param mask Splinter type bitmask to apply (e.g SPL_SLOT_TYPE_BIGUINT)\n @return -1 or on error (sets errno), 0 on success"]
    pub fn splinter_set_named_type(
        key: *const ::std::os::raw::c_char,
        mask: u16,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Update a slot's ctime / atime\n @param key Name of the key to change\n @param mode (SPL_TIME_CTIME or SPL_TIME_ATIME)\n @param epoch client-supplied timestamp\n @param offset value to subtract from epoch due to update-after-write\n @return -1/-2 or on error (sets errno), 0 on success"]
    pub fn splinter_set_slot_time(
        key: *const ::std::os::raw::c_char,
        mode: ::std::os::raw::c_ushort,
        epoch: u64,
        offset: usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Bitwise & arithmetic ops on keys named as big unsigned\n @param key Name of the key  to operate on\n @param op Operation you want to do\n @param mask What you want to do it with\n @return 0 on success, -1 / -2 on internal / caller errors respectively"]
    pub fn splinter_integer_op(
        key: *const ::std::os::raw::c_char,
        op: splinter_integer_op_t,
        mask: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Get a direct pointer to a value in shared memory.\n @warning Unsafe: The data at this pointer can change or be zeroed if a\n writer modifies the slot. Use splinter_get_epoch to verify consistency.\n @param key The key to look up.\n @param out_sz Pointer to receive the actual length of the value.\n @param out_epoch Pointer to receive the epoch at the time of lookup.\n @return A const pointer to the data in SHM, or NULL if not found."]
    pub fn splinter_get_raw_ptr(
        key: *const ::std::os::raw::c_char,
        out_sz: *mut usize,
        out_epoch: *mut u64,
    ) -> *const ::std::os::raw::c_void;
}
unsafe extern "C" {
    #[doc = " @brief Get the current epoch of a specific slot.\n @return The 64-bit epoch, or 0 if key not found."]
    pub fn splinter_get_epoch(key: *const ::std::os::raw::c_char) -> u64;
}
unsafe extern "C" {
    #[doc = " @brief Atomically apply a label mask to a slot's Bloom filter.\n @return 0 on success, -1 if key not found."]
    pub fn splinter_set_label(
        key: *const ::std::os::raw::c_char,
        mask: u64,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Client-side helper to write multiple orders of a key.\n * Since we've backed out library-side linking, this helper manages\n the naming convention for the caller."]
    pub fn splinter_client_set_tandem(
        base_key: *const ::std::os::raw::c_char,
        vals: *mut *const ::std::os::raw::c_void,
        lens: *const usize,
        orders: u8,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Client-side helper to delete a key and its known orders."]
    pub fn splinter_client_unset_tandem(base_key: *const ::std::os::raw::c_char, orders: u8);
}
unsafe extern "C" {
    #[doc = " @brief Registers interest in a key's group signal."]
    pub fn splinter_watch_register(
        key: *const ::std::os::raw::c_char,
        group_id: u8,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Unregisters interest in a key's group signal."]
    pub fn splinter_watch_unregister(
        key: *const ::std::os::raw::c_char,
        group_id: u8,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Maps a Bloom label (bitmask) to a signal group."]
    pub fn splinter_watch_label_register(bloom_mask: u64, group_id: u8) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Internal helper to pulse the Signal Arena for a slot."]
    pub fn splinter_pulse_watchers(slot: *mut splinter_slot);
}
unsafe extern "C" {
    #[doc = " @brief Safely retrieve the current pulse count for a signal group. Good for debugging.\n @param group_id The signal group (0-63).\n @return The 64-bit pulse count, or 0 if invalid."]
    pub fn splinter_get_signal_count(group_id: u8) -> u64;
}
